# hoya-web

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust-clippy.yml  security_audit.yml
src/: errors.rs  lib.rs
src/db/: database.rs  message.rs  product.rs  product_filter.rs  proxy.rs  proxy_parsing_rules.rs
src/db/relational/: mod.rs  tables_config.sql
src/db/relational/entities/: alerts.rs  contacts.rs  parsinglookup.rs  prelude.rs  product.rs  proxysources.rs  shopposition.rs
src/parser/: errors.rs  traits.rs
tests/: data.json  test_app.rs
webapp/: Cargo.toml  Dockerfile
webapp/.github/workflows/: rust.yml  security_audit.yml
webapp/configuration/: dev.yaml
webapp/public/: script.js  style.css
webapp/src/: app_state.rs  configuration.rs  data_models.rs  errors.rs  lib.rs  main.rs  templates.rs
webapp/src/db/: database.rs  errors.rs  in_memory.rs  map_json_as_pairs.rs  message.rs  mod.rs  product_alert.rs  product_filter.rs  product_position.rs  search_filter.rs  search_query.rs  shop.rs  shop_parsing_rules.rs  traits.rs
webapp/src/db/in_memory/: mod.rs
webapp/src/db/relational/: mod.rs  tables_config.sql
webapp/src/db/relational/entities/: historicprice.rs  messages.rs  mod.rs  parsingcategory.rs  parsinglookup.rs  prelude.rs  proxy.rs  proxyparsingrules.rs  shop.rs  shopparsingrules.rs  shopposition.rs
webapp/src/parser/: errors.rs  mod.rs  positions_parser.rs  proxy_parser.rs  traits.rs
webapp/src/routes/: mod.rs
webapp/templates/: base.html  contact.html  hoya_page.html  index.html  list.html  not_found.html  privacy_policy.html
webapp/tests/: test_app.rs
